# Anything2Workspace

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gaps_analysis.md  pipeline_draft.md  pipeline_spec.md  pyproject.toml
.claude/: settings.local.json
dev_log/: 2026-02-14.md  2026-02-15.md  2026-02-16.md
module_design/: module1_anything2markdown.md  module2_markdown2chunks.md  module3_chunks2skus.md  module4_skus2workspace.md
src/anything2markdown/: __init__.py  cli.py  config.py  pipeline.py  router.py
src/anything2markdown/parsers/: __init__.py  base.py  markitdown_parser.py  mineru_parser.py  paddleocr_vl_parser.py  tabular_parser.py
src/anything2markdown/schemas/: __init__.py  result.py
src/anything2markdown/url_parsers/: __init__.py  base.py  bilibili_parser.py  firecrawl_parser.py  repomix_parser.py  youtube_parser.py
src/anything2markdown/utils/: __init__.py  file_utils.py  logging_setup.py  retry.py
src/chunks2skus/: __init__.py  cli.py  config.py  pipeline.py  router.py
src/chunks2skus/extractors/: __init__.py  base.py  factual_extractor.py  meta_extractor.py  procedural_extractor.py  relational_extractor.py
src/chunks2skus/postprocessors/: __init__.py  base.py  bucketing.py  dedup.py  pipeline.py  proofreading.py
src/chunks2skus/schemas/: __init__.py  index.py  postprocessing.py  sku.py
src/chunks2skus/utils/: __init__.py  embedding_client.py  jina_client.py  llm_client.py  logging_setup.py  token_utils.py
src/markdown2chunks/: __init__.py  cli.py  config.py  pipeline.py  router.py
src/skus2workspace/: __init__.py  assembler.py  chatbot.py  cli.py  config.py  pipeline.py  readme_generator.py
tests/: test_dedup_actions.py  test_glossary.py  test_index.py  test_json_parsing.py  test_label_matching.py  test_label_tree.py  test_language.py  test_localize_prompt.py  test_relationships.py  test_sku_header.py
(+17 files in other folders)
