[project]
name = "anything2workspace"
version = "0.1.0"
description = "Knowledge management and modelling pipeline - converts various media to structured workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core parsing
    "markitdown[all]>=0.1.0",

    # URL parsing
    "firecrawl-py>=1.0.0",
    "youtube-transcript-api>=0.6.0",

    # Data processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",  # For .xls Excel files
    "PyPDF2>=3.0.0",  # For PDF splitting

    # HTTP requests (for MinerU API)
    "httpx>=0.27.0",

    # CLI and config
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Logging
    "structlog>=24.0.0",

    # Module 2: Chunking
    "tiktoken>=0.7.0",           # Token estimation
    "python-Levenshtein>=0.25.0", # Fuzzy string matching
    "openai>=1.0.0",             # For SiliconFlow API (OpenAI-compatible)

    # Module 3: Postprocessing
    "scikit-learn>=1.3.0",       # TF-IDF + cosine similarity
    "scipy>=1.11.0",             # Agglomerative clustering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
anything2md = "anything2markdown.cli:main"
md2chunks = "markdown2chunks.cli:main"
chunks2skus = "chunks2skus.cli:main"
skus2workspace = "skus2workspace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anything2markdown", "src/markdown2chunks", "src/chunks2skus", "src/skus2workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
